fix: button alignment on safari

--- a/src/app/headerbar/headerbar.component.scss
+++ b/src/app/headerbar/headerbar.component.scss
@@ -30,15 +30,18 @@
 
 .filter-button {
     height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    line-height: 30px;
     border-radius: 15px;
     margin-right: 30px;
-    span {
-        margin-right: 0.8em;
-        @media screen and (max-width: 450px) {
-            display: none;
+    .button-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        span {
+            margin-right: 0.8em;
+            @media screen and (max-width: 450px) {
+                display: none;
+            }
         }
     }
 }
