--- a/src/app/search-field/search-field.component.scss
+++ b/src/app/search-field/search-field.component.scss
@@ -37,7 +37,7 @@ form {
             .submit-button {
                 display: flex;
                 align-items: center;
-                height: 30px;
+                line-height: 30px;
                 border-radius: 15px;
                 margin: 6px;
             }
